# d3d11-sandbox

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  cbuffer.h  data.h  forward.hlsl  generate_vs_solution.bat  graphics.cpp  graphics.h  library.cpp  library.h  main.cpp  mesh.cpp  mesh.h  pch.h  shader.cpp  shader.h  tasks.txt  texture.cpp  texture.h  ui.cpp  ui.h  utils.hlsl  window.cpp  window.h
